--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="shortcuts_favorite_disable">收藏（不可用）</string>
     <string name="shortcuts_favorite_short">收藏</string>
     <string name="shortcuts_favorite_long">我的收藏</string>
+    <string name="setting_login">登录</string>
 </resources>
